# music-explorer-progress

./: Procfile  README.md  compose.yml  pyproject.toml
config/: config.yml
src/app_explorer/: __init__.py  app.py  celery_config.py  progress.md  task_simulator.py  tasks.py  wsgi.py
src/app_explorer/static/: progress_etl.js
src/app_explorer/static/css/: style.css
src/app_explorer/templates/: config.html  home.html  layout.html
src/log_config/: logging_config.py
